--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</div>
 		<div>
 			<label for="password"><b>Password</b></label>
-			<input type="text" name="password" placeholder="Enter your password" required>
+			<input type="password" name="password" placeholder="Enter your password" required>
 		</div>
 			<a href="./sign_up.html">register</a><br><br>
 		<input type="submit" value="Submit">
