--- a/sign_up.html
+++ b/sign_up.html
@@ -12,8 +12,8 @@
 			<div><input type="text" name="fname" placeholder="First name"></div>
 			<div><input type="text" name="lname" placeholder="Last name"></div>
 			<div><input type="text" name="email" placeholder="your email"></div>
-			<div><input type="text" name="pass1" placeholder="Password"></div>
-			<div><input type="text" name="pass2" placeholder="retype the Password"></div>
+			<div><input type="Password" name="pass1" placeholder="Password"></div>
+			<div><input type="Password" name="pass2" placeholder="retype the Password"></div>
 			<div> <input type="submit"	value="submit"> </div><br>
 			<a href="index.html" >you have an account </a>
 
