add session and destroy

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-	<form action="./action.php" method="post">
+	<form action="./connexion.php" method="post">
 		<div>
 			<label for="email"><b>Email</b></label>
 			<input type="text" name="email" placeholder="Enter your Email" required>
